--- a/IntervalAlgebraTests/IntervalAlgebraTests.fsproj
+++ b/IntervalAlgebraTests/IntervalAlgebraTests.fsproj
@@ -18,7 +18,6 @@
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\SegmentAlgebra\SegmentAlgebra.fsproj" />
+    <ProjectReference Include="..\IntervalAlgebra\IntervalAlgebra.fsproj" />
   </ItemGroup>
-
 </Project>
