--- a/SpanAlgebraTests/SpanAlgebraTests.fsproj
+++ b/SpanAlgebraTests/SpanAlgebraTests.fsproj
@@ -18,6 +18,6 @@
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\IntervalAlgebra\SpanAlgebra.fsproj" />
+    <ProjectReference Include="..\SpanAlgebra\SpanAlgebra.fsproj" />
   </ItemGroup>
 </Project>
