--- a/SpanAlgebra/SpanAlgebra.fsproj
+++ b/SpanAlgebra/SpanAlgebra.fsproj
@@ -4,6 +4,6 @@
         <TargetFramework>netcoreapp2.1</TargetFramework>
     </PropertyGroup>
     <ItemGroup>
-        <Compile Include="SpanAlgebra.fs" />
+        <Compile Include="Span.fs" />
     </ItemGroup>
 </Project>
