--- a/SpanAlgebra/SpanAlgebra.fsproj
+++ b/SpanAlgebra/SpanAlgebra.fsproj
@@ -6,4 +6,7 @@
     <ItemGroup>
         <Compile Include="Span.fs" />
     </ItemGroup>
+    <ItemGroup>
+      <PackageReference Update="FSharp.Core" Version="4.5.4" />
+    </ItemGroup>
 </Project>
