--- a/SpanAlgebra/SpanAlgebra.fsproj
+++ b/SpanAlgebra/SpanAlgebra.fsproj
@@ -7,6 +7,6 @@
         <Compile Include="Span.fs" />
     </ItemGroup>
     <ItemGroup>
-      <PackageReference Update="FSharp.Core" Version="4.5.4" />
+        <PackageReference Include="FSharp.Core" Version="5.0.0" />
     </ItemGroup>
 </Project>
