--- a/SpanAlgebraTests/SpanAlgebraTests.fsproj
+++ b/SpanAlgebraTests/SpanAlgebraTests.fsproj
@@ -14,10 +14,11 @@
   </ItemGroup>
 
   <ItemGroup>
-    <PackageReference Include="Microsoft.NET.Test.Sdk" Version="16.9.4" />
-    <PackageReference Include="NFluent" Version="2.7.2" />
-    <PackageReference Include="NUnit" Version="3.13.1" />
-    <PackageReference Include="NUnit3TestAdapter" Version="3.17.0" />
+    <PackageReference Include="FsUnit" Version="4.0.4" />
+    <PackageReference Include="nunit" Version="3.13.2" />
+    <PackageReference Include="NUnit3TestAdapter" Version="4.0.0" />
+    <PackageReference Include="Microsoft.NET.Test.Sdk" Version="16.10.0" />
+    <PackageReference Include="FSharp.Core" Version="5.0.0" />
   </ItemGroup>
 
 </Project>
